<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    tools:context=".ui.fragments.RickAndMortyFragment">

    <Button
        android:id="@+id/btn_visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_in_fifty"
        android:backgroundTint="@color/teal_700"
        android:text="@string/search"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/fm_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_in_twenty"
            android:backgroundTint="@color/white"
            android:hint="@string/et_status"
            android:textColorHint="@color/light_gray" />

        <EditText
            android:id="@+id/et_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_in_twenty"
            android:backgroundTint="@color/white"
            android:hint="@string/et_species"
            android:textColorHint="@color/light_gray" />

        <EditText
            android:id="@+id/ete_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_in_twenty"
            android:backgroundTint="@color/white"
            android:hint="@string/et_type"
            android:textColorHint="@color/light_gray" />

        <EditText
            android:id="@+id/et_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_in_twenty"
            android:backgroundTint="@color/white"
            android:hint="@string/et_gender"
            android:textColorHint="@color/light_gray" />

        <Button
            android:id="@+id/btn_invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_in_fifty"
            android:backgroundTint="@color/teal_700"
            android:text="@string/search" />

    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_in_seventy"
        android:background="@color/purple_200" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_in_fifteen"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>